# 2D-Engine

./: README.md  _sync_version.py  _upload.py  pyproject.toml
engine/: __init__.py  _version.py  _window.py
engine/_core/: _entity.py
engine/_internal/: __init__.py  validators.py
engine/_rendering/: __init__.py  _camera.py  _pipeline.py  _renderer.py  _viewport.py
engine/abc/: _system.py
engine/asset/: __init__.py  _color.py  _image.py  _text.py
engine/assets/: image.py
engine/component/: __init__.py  _collider.py  _rigid_body.py  _shape_renderer.py  _sprite_renderer.py  _text_renderer.py  _transform.py  sprite_renderer.py
engine/components/: sprite.py
engine/core/: __init__.py  math_object.py  world.py
engine/ecs/: __init__.py  _entity.py  _system.py  _world.py
engine/math/: _line.py  _point.py  _vector.py  line.py  point.py  vector.py
engine/scene/: __init__.py  _layer.py  _scene.py  _scene_manager.py  _stack_mode.py  _world_layer.py
engine/shape/: __init__.py  _capsule.py  _circle.py  _ellipse.py  _polygon.py  _rect.py  _segment.py  capsule.py  circle.py  ellipse.py  rect.py
engine/shapes/: capsule.py  segment.py
engine/system/: __init__.py  _collision.py  _gravity.py  _physics.py  _render.py  collision.py
engine/tool/: __init__.py
engine/world/: __init__.py
pyverse2d/: __init__.py  _version.py
pyverse2d-0.32.6/: PKG-INFO  README.md  pyproject.toml
pyverse2d/_flag/: __init__.py  _activity.py  _camera_mode.py  _coord_space.py  _key.py  _stack_mode.py  _super.py  _update_phase.py
pyverse2d/_internal/: __init__.py  _callbacks.py  (+2 more)
(+204 files in other folders)
