[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyverse2d"
version = "0.4.2"
description = "2D Game Engine using pyglet (OpenGL) for rendering"
authors = [{ name = "WhiteWolf45380" }]
dependencies = [
    "pyglet",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyverse2d*"]